fixed css wrapping problem

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -151,7 +151,7 @@ pre {
       display: block;
       text-align: left;
     }
-    section.wrapper {
+    span.wrapper {
       min-width: 400px;
       display: inline-block;
     }
